--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-    command="yarn build"
+    command="npm run build && cd functions && npm install"
     functions="functions"
     publish="public"
